[package]
name = "iroh-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
autosurgeon = {version="0.8"}
automerge = {version="0.5"}
iroh = "0.30"
tokio ={ version="1",features = ["full"] }
anyhow = "1"
iroh-gossip = "0.30"
rand = "0.8"
serde = "1"
serde_json = "1"
bytes = { version = "1.7", features = ["serde"] }
ed25519-dalek = { version = "2.0.0", features = ["serde", "rand_core"] }
postcard = { version = "1", default-features = false, features = ["alloc", "use-std", "experimental-derive"] }
futures-lite = "2"
hex = "0.4"